--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,3 +1,9 @@
+@import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:200,300,400,700);
+
+
+
+
+
 body {
   font-style: normal;
   line-height: 1.5;
@@ -14,35 +20,35 @@ body {
   line-height: 1.6;
 }
 .display-1 {
-  font-family: 'Dense-Regular';
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   font-size: 4.25rem;
 }
 .display-1 > .mbr-iconfont {
   font-size: 6.8rem;
 }
 .display-2 {
-  font-family: 'Dense-Regular';
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   font-size: 3.6rem;
 }
 .display-2 > .mbr-iconfont {
   font-size: 5.76rem;
 }
 .display-4 {
-  font-family: 'Dense-Regular';
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   font-size: 1.4rem;
 }
 .display-4 > .mbr-iconfont {
   font-size: 2.24rem;
 }
 .display-5 {
-  font-family: 'Dense-Regular';
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   font-size: 1.8rem;
 }
 .display-5 > .mbr-iconfont {
   font-size: 2.88rem;
 }
 .display-7 {
-  font-family: 'YanoneKaffeesatz-Light';
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   font-size: 1.4rem;
 }
 .display-7 > .mbr-iconfont {
@@ -652,7 +658,7 @@ a:hover {
   background-color: #f5f5f5;
   box-shadow: none;
   color: #565656;
-  font-family: 'YanoneKaffeesatz-Light';
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   font-size: 1.4rem;
   line-height: 1.43;
   min-height: 3.5em;
