--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1376,19 +1376,24 @@ body {
 .dropup .dropdown-toggle::after {
   display: none;
 }
-.cid-r6osCpltVT {
-  padding-top: 120px;
-  padding-bottom: 90px;
+.cid-r9pBPk0gXJ {
+  padding-top: 45px;
+  padding-bottom: 45px;
   background-image: url("../../../assets/images/background-black-blackboard-159770-2000x1333.jpg");
 }
 @media (min-width: 992px) {
-  .cid-r6osCpltVT .mbr-figure {
-    padding-left: 4rem;
+  .cid-r9pBPk0gXJ .mbr-figure {
+    padding-right: 4rem;
   }
 }
 @media (max-width: 991px) {
-  .cid-r6osCpltVT .mbr-figure {
-    padding-top: 3rem;
+  .cid-r9pBPk0gXJ .mbr-figure {
+    padding-bottom: 3rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-r9pBPk0gXJ .mbr-text {
+    text-align: center;
   }
 }
 .cid-r5QOhcxmyS .navbar {
