--- a/curso/assets/mobirise/css/mbr-additional.css
+++ b/curso/assets/mobirise/css/mbr-additional.css
@@ -1600,95 +1600,6 @@ body {
 .cid-qU8SQbJV7q .mbr-timeline-text {
   text-align: right;
 }
-.cid-r6nY2l6SqK {
-  padding-top: 30px;
-  padding-bottom: 45px;
-  background-color: #ffffff;
-}
-.cid-r6nY2l6SqK .mbr-section-subtitle {
-  color: #767676;
-  font-weight: 300;
-}
-.cid-r6nY2l6SqK .number-wrap {
-  color: #ffffff;
-  border-color: rgba(255, 255, 255, 0.15);
-  position: relative;
-  display: inline-block;
-  text-align: center;
-  padding: 5px 10px 13px 10px;
-  margin: 0;
-  min-width: 118px;
-  border-radius: 2px;
-  max-width: 100%;
-}
-.cid-r6nY2l6SqK .number {
-  font-style: normal;
-  font-weight: 700;
-  text-transform: none;
-  letter-spacing: -2px;
-  font-size: 55px;
-  word-spacing: 0;
-  line-height: 1.3;
-  color: #ffffff;
-}
-.cid-r6nY2l6SqK .period {
-  display: block;
-  padding-top: 2px;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-}
-.cid-r6nY2l6SqK .dot {
-  position: absolute;
-  top: -10px;
-  right: -1em;
-  width: 1em;
-  display: block;
-  font-size: 55px;
-  height: 83%;
-  overflow: hidden;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 89.65px;
-  text-transform: none;
-  letter-spacing: 0;
-  word-spacing: 0;
-  color: #ffffff;
-}
-.cid-r6nY2l6SqK .countdown-cont {
-  background: linear-gradient(45deg, #072116, #000000);
-  max-width: 700px;
-  border-radius: 3px;
-  margin: 0 auto;
-}
-@media (max-width: 768px) {
-  .cid-r6nY2l6SqK .dot {
-    display: none;
-  }
-}
-@media (max-width: 543px) {
-  .cid-r6nY2l6SqK .number-wrap {
-    margin-bottom: 15px;
-  }
-}
-@media (max-width: 550px) {
-  .cid-r6nY2l6SqK .col-xs-3 {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  .cid-r6nY2l6SqK .number-wrap {
-    min-width: auto;
-  }
-}
-@media (max-width: 440px) {
-  .cid-r6nY2l6SqK .number,
-  .cid-r6nY2l6SqK .dot {
-    font-size: 40px;
-  }
-}
-@media (max-width: 380px) {
-  .cid-r6nY2l6SqK .period {
-    font-size: 0.8rem;
-  }
-}
 .cid-qU8sTPohVr {
   background: #ffffff;
 }
@@ -1755,6 +1666,93 @@ body {
 @media (max-width: 768px) {
   .cid-r5QNxjSeC4 .image-block {
     width: 100% !important;
+  }
+}
+.cid-rbSZApeKn1 {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rbSZApeKn1 .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-rbSZApeKn1 .number-wrap {
+  color: #565656;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-rbSZApeKn1 .number {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  text-transform: none;
+  letter-spacing: -2px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #28262b;
+}
+.cid-rbSZApeKn1 .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-rbSZApeKn1 .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: block;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 55px;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #28262b;
+}
+.cid-rbSZApeKn1 .countdown-cont {
+  max-width: 700px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rbSZApeKn1 .dot {
+    display: none;
+  }
+}
+@media (max-width: 543px) {
+  .cid-rbSZApeKn1 .number-wrap {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .cid-rbSZApeKn1 .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .cid-rbSZApeKn1 .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 440px) {
+  .cid-rbSZApeKn1 .number,
+  .cid-rbSZApeKn1 .dot {
+    font-size: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .cid-rbSZApeKn1 .period {
+    font-size: 0.8rem;
   }
 }
 .cid-r6ojAhqtJS {
