--- a/curso/assets/mobirise/css/mbr-additional.css
+++ b/curso/assets/mobirise/css/mbr-additional.css
@@ -1376,23 +1376,23 @@ body {
 .dropup .dropdown-toggle::after {
   display: none;
 }
-.cid-r6bCG9EImI {
+.cid-rdFXcgdNu6 {
   padding-top: 45px;
   padding-bottom: 45px;
   background-image: url("../../../assets/images/background-black-blackboard-159770-2000x1333.jpg");
 }
 @media (min-width: 992px) {
-  .cid-r6bCG9EImI .mbr-figure {
+  .cid-rdFXcgdNu6 .mbr-figure {
     padding-right: 4rem;
   }
 }
 @media (max-width: 991px) {
-  .cid-r6bCG9EImI .mbr-figure {
+  .cid-rdFXcgdNu6 .mbr-figure {
     padding-bottom: 3rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-r6bCG9EImI .mbr-text {
+  .cid-rdFXcgdNu6 .mbr-text {
     text-align: center;
   }
 }
@@ -1755,21 +1755,10 @@ body {
     font-size: 0.8rem;
   }
 }
-.cid-rcGJm1hA7V {
-  padding-top: 60px;
-  padding-bottom: 0px;
-  background-color: #ca1c1c;
-}
-.cid-rcGJm1hA7V .mbr-section-subtitle {
-  color: #efefef;
-}
-.cid-rcGJm1hA7V B {
-  color: #ffffff;
-}
 .cid-r6ojAhqtJS {
   padding-top: 45px;
   padding-bottom: 90px;
-  background: linear-gradient(45deg, #ca1c1c, #ca1c1c);
+  background: linear-gradient(45deg, #072116, #000000);
 }
 .cid-r6ojAhqtJS .list-group-item {
   padding: .75rem 3.25rem;
