--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1376,23 +1376,23 @@ body {
 .dropup .dropdown-toggle::after {
   display: none;
 }
-.cid-r9pBPk0gXJ {
+.cid-rdSqKphtix {
   padding-top: 45px;
   padding-bottom: 45px;
   background-image: url("../../../assets/images/background-black-blackboard-159770-2000x1333.jpg");
 }
 @media (min-width: 992px) {
-  .cid-r9pBPk0gXJ .mbr-figure {
+  .cid-rdSqKphtix .mbr-figure {
     padding-right: 4rem;
   }
 }
 @media (max-width: 991px) {
-  .cid-r9pBPk0gXJ .mbr-figure {
+  .cid-rdSqKphtix .mbr-figure {
     padding-bottom: 3rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-r9pBPk0gXJ .mbr-text {
+  .cid-rdSqKphtix .mbr-text {
     text-align: center;
   }
 }
