Actualización Curso Online a Whatsapp

--- a/curso/assets/mobirise/css/mbr-additional.css
+++ b/curso/assets/mobirise/css/mbr-additional.css
@@ -1909,3 +1909,195 @@ body {
 .cid-qU8A7WgWjS .media-container-row .row-copirayt p {
   width: 100%;
 }
+.cid-ri7lZS3StU {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background: linear-gradient(45deg, #227f56, #227f56);
+}
+.cid-ri7lZS3StU .mbr-text,
+.cid-ri7lZS3StU .mbr-section-btn {
+  color: #ffffff;
+}
+.cid-ri7lZS3StU H1 {
+  color: #232323;
+}
+.cid-ri7lZS3StU B {
+  color: #ffffff;
+}
+.cid-ri7ohx3Vin {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-ri7ohx3Vin .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-ri7ohx3Vin .btn {
+  margin: 0 0 .5rem 0;
+}
+.cid-ri7lyA8S6M {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
+.cid-ri7lyA8S6M .row-links {
+  width: 100%;
+  justify-content: center;
+}
+.cid-ri7lyA8S6M .social-row {
+  width: 100%;
+  justify-content: center;
+}
+.cid-ri7lyA8S6M .media-container-row {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cid-ri7lyA8S6M .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-ri7lyA8S6M .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-ri7lyA8S6M .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-ri7lyA8S6M .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-ri7lyA8S6M .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-ri7lyA8S6M .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-ri7lyA8S6M .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-ri7lyA8S6M .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-ri7lyA8S6M .media-container-row .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
+.cid-ri7lyA8S6M .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-ri7lyA8S6M .media-container-row .row-copirayt p {
+  width: 100%;
+}
+.cid-ri7n7bmAGw {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background: linear-gradient(45deg, #227f56, #227f56);
+}
+.cid-ri7n7bmAGw .mbr-text,
+.cid-ri7n7bmAGw .mbr-section-btn {
+  color: #ffffff;
+}
+.cid-ri7n7bmAGw H1 {
+  color: #232323;
+}
+.cid-ri7n7bmAGw B {
+  color: #ffffff;
+}
+.cid-ri7oLpli5f {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-ri7oLpli5f .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-ri7oLpli5f .btn {
+  margin: 0 0 .5rem 0;
+}
+.cid-ri7n7cB8vN {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
+.cid-ri7n7cB8vN .row-links {
+  width: 100%;
+  justify-content: center;
+}
+.cid-ri7n7cB8vN .social-row {
+  width: 100%;
+  justify-content: center;
+}
+.cid-ri7n7cB8vN .media-container-row {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cid-ri7n7cB8vN .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-ri7n7cB8vN .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-ri7n7cB8vN .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-ri7n7cB8vN .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-ri7n7cB8vN .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-ri7n7cB8vN .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-ri7n7cB8vN .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-ri7n7cB8vN .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-ri7n7cB8vN .media-container-row .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
+.cid-ri7n7cB8vN .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-ri7n7cB8vN .media-container-row .row-copirayt p {
+  width: 100%;
+}
