Actualizacion Evento Mexico 3

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5047,7 +5047,7 @@ body {
 .cid-rixTbvbXsd {
   padding-top: 30px;
   padding-bottom: 15px;
-  background-color: #227f56;
+  background-color: #ffffff;
 }
 .cid-rixTbvbXsd .mbr-section-subtitle {
   color: #767676;
@@ -5056,10 +5056,10 @@ body {
   margin: 0 0 .5rem 0;
 }
 .cid-rixTbvbXsd .mbr-section-subtitle B {
-  color: #ffffff;
+  color: #232323;
 }
 .cid-rixTbvbXsd DIV {
-  color: #ffffff;
+  color: #232323;
 }
 .cid-rbdixs1H7e {
   padding-top: 15px;
@@ -5136,7 +5136,7 @@ body {
 .cid-rixV7zkUaK {
   padding-top: 30px;
   padding-bottom: 15px;
-  background-color: #227f56;
+  background-color: #ffffff;
 }
 .cid-rixV7zkUaK .mbr-section-subtitle {
   color: #767676;
@@ -5145,10 +5145,13 @@ body {
   margin: 0 0 .5rem 0;
 }
 .cid-rixV7zkUaK .mbr-section-subtitle B {
-  color: #ffffff;
+  color: #232323;
 }
 .cid-rixV7zkUaK DIV {
   color: #ffffff;
+}
+.cid-rixV7zkUaK SPAN {
+  color: #232323;
 }
 .cid-rixV0Pqy8S {
   padding-top: 90px;
