--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5234,3 +5234,783 @@ body {
 .cid-rbdixua16s .media-container-row .row-copirayt p {
   width: 100%;
 }
+.cid-rjW6AebkHR .navbar {
+  padding: .5rem 0;
+  background: #000000;
+  transition: none;
+  min-height: 77px;
+}
+.cid-rjW6AebkHR .navbar-dropdown.bg-color.transparent.opened {
+  background: #000000;
+}
+.cid-rjW6AebkHR a {
+  font-style: normal;
+}
+.cid-rjW6AebkHR .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-rjW6AebkHR .nav-item a {
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-rjW6AebkHR .nav-item:focus,
+.cid-rjW6AebkHR .nav-link:focus {
+  outline: none;
+}
+.cid-rjW6AebkHR .btn {
+  padding: 0.4rem 1.5rem;
+  display: -webkit-inline-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rjW6AebkHR .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-rjW6AebkHR .menu-logo {
+  margin-right: auto;
+}
+.cid-rjW6AebkHR .menu-logo .navbar-brand {
+  display: -webkit-flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rjW6AebkHR .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: -webkit-flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-rjW6AebkHR .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-rjW6AebkHR .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-rjW6AebkHR .menu-logo .navbar-brand .navbar-logo img {
+  display: -webkit-flex;
+}
+.cid-rjW6AebkHR .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-rjW6AebkHR .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-rjW6AebkHR .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-rjW6AebkHR .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-rjW6AebkHR .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-rjW6AebkHR .dropdown .dropdown-menu {
+  background: #000000;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-rjW6AebkHR .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-rjW6AebkHR .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-rjW6AebkHR .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-rjW6AebkHR .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-rjW6AebkHR .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-rjW6AebkHR .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-rjW6AebkHR .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-rjW6AebkHR .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-rjW6AebkHR .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-rjW6AebkHR .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-rjW6AebkHR .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-rjW6AebkHR button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-rjW6AebkHR button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-rjW6AebkHR button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ffffff;
+}
+.cid-rjW6AebkHR button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-rjW6AebkHR button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rjW6AebkHR button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rjW6AebkHR button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-rjW6AebkHR nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rjW6AebkHR nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-rjW6AebkHR nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-rjW6AebkHR nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rjW6AebkHR .collapsed.navbar-expand {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rjW6AebkHR .collapsed .btn {
+  display: -webkit-flex;
+}
+.cid-rjW6AebkHR .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-rjW6AebkHR .collapsed .navbar-collapse.collapsing,
+.cid-rjW6AebkHR .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-rjW6AebkHR .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-rjW6AebkHR .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-rjW6AebkHR .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-rjW6AebkHR .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-rjW6AebkHR .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-rjW6AebkHR .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
+.cid-rjW6AebkHR .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-rjW6AebkHR .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-rjW6AebkHR .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-rjW6AebkHR .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-rjW6AebkHR .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-rjW6AebkHR .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-rjW6AebkHR .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rjW6AebkHR .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-rjW6AebkHR .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-rjW6AebkHR .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-rjW6AebkHR .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-rjW6AebkHR .navbar-expand {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rjW6AebkHR img {
+    height: 3.8rem !important;
+  }
+  .cid-rjW6AebkHR .btn {
+    display: -webkit-flex;
+  }
+  .cid-rjW6AebkHR button.navbar-toggler {
+    display: block;
+  }
+  .cid-rjW6AebkHR .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-rjW6AebkHR .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rjW6AebkHR .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-rjW6AebkHR .navbar-collapse.collapsing,
+  .cid-rjW6AebkHR .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-rjW6AebkHR .navbar-collapse.collapsing .navbar-nav,
+  .cid-rjW6AebkHR .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-rjW6AebkHR .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-rjW6AebkHR .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-rjW6AebkHR .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-rjW6AebkHR .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rjW6AebkHR .navbar-collapse.collapsing .navbar-buttons,
+  .cid-rjW6AebkHR .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-rjW6AebkHR .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-rjW6AebkHR .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rjW6AebkHR .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-rjW6AebkHR .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-rjW6AebkHR .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-rjW6AebkHR .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-rjW6AebkHR .menu-logo {
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+  }
+}
+.cid-rjW6AebkHR .navbar-collapse {
+  flex-basis: auto;
+  -webkit-flex-basis: auto;
+}
+.cid-rjW6AebkHR .nav-link:hover,
+.cid-rjW6AebkHR .dropdown-item:hover {
+  color: #c1c1c1 !important;
+}
+.cid-rjW6AeZTAV {
+  padding-top: 75px;
+  padding-bottom: 45px;
+  background-image: url("../../../assets/images/fondo-pizarra-1500x831.png");
+}
+@media (min-width: 992px) {
+  .cid-rjW6AeZTAV .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rjW6AeZTAV .mbr-figure {
+    padding-bottom: 3rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-rjW6AeZTAV .mbr-text {
+    text-align: center;
+  }
+}
+.cid-rjW6AgyLzg {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rjW6AgyLzg .mbr-section-subtitle {
+  color: #767676;
+  text-align: left;
+}
+.cid-rjW6AgyLzg H2 {
+  text-align: left;
+}
+.cid-rjW6AgyLzg .mbr-section-subtitle DIV {
+  text-align: left;
+}
+.cid-rjW6Ahm3hG {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #efefef;
+}
+.cid-rjW6Ahm3hG .mbr-section-subtitle {
+  color: #767676;
+  text-align: right;
+}
+.cid-rjW6Ahm3hG H2 {
+  text-align: right;
+}
+.cid-rjW6Aiqu2X {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rjW6Aiqu2X .mbr-slider .carousel-control {
+  background: #1b1b1b;
+}
+.cid-rjW6Aiqu2X .mbr-slider .carousel-control-prev {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-rjW6Aiqu2X .mbr-slider .carousel-control-next {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-rjW6Aiqu2X .mbr-slider .modal-body .close {
+  background: #1b1b1b;
+}
+.cid-rjW6Aiqu2X .mbr-gallery-item > div::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: #554346;
+  opacity: 0;
+  -webkit-transition: 0.2s opacity ease-in-out;
+  transition: 0.2s opacity ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
+.cid-rjW6Aiqu2X .mbr-gallery-item > div:hover .mbr-gallery-title::before {
+  background: transparent !important;
+}
+.cid-rjW6Aiqu2X .mbr-gallery-item > div:hover:before {
+  opacity: 0.7 !important;
+}
+.cid-rjW6Aiqu2X .mbr-gallery-title {
+  font-size: .9em;
+  position: absolute;
+  display: block;
+  width: 100%;
+  bottom: 0;
+  padding: 1rem;
+  color: #fff;
+  z-index: 2;
+}
+.cid-rjW6Aiqu2X .mbr-gallery-title:before {
+  content: " ";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  background: #554346 !important;
+  opacity: 0.7;
+  -webkit-transition: 0.2s background ease-in-out;
+  transition: 0.2s background ease-in-out;
+  background: linear-gradient(to left, #554346, #45505b) !important;
+}
+.cid-rjW6AktQWq {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rjW6AktQWq .mbr-section-subtitle {
+  color: #767676;
+  text-align: left;
+}
+.cid-rjW6AktQWq H2 {
+  text-align: left;
+}
+.cid-rjW6AktQWq .mbr-section-subtitle DIV {
+  text-align: left;
+}
+.cid-rjW6AlLAlA {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background-color: #072116;
+}
+.cid-rjW6AlLAlA .mbr-section-subtitle {
+  color: #cccccc;
+  text-align: center;
+  font-weight: 300;
+}
+.cid-rjW6AlLAlA .timeline-text-content {
+  padding: 2rem 2.5rem;
+  background: #ffffff;
+  margin-left: 2rem;
+}
+.cid-rjW6AlLAlA .timeline-text-content p {
+  margin-bottom: 0;
+}
+.cid-rjW6AlLAlA .time-line-date-content {
+  margin-right: 2rem;
+}
+.cid-rjW6AlLAlA .time-line-date-content p {
+  padding: 2rem 2.5rem;
+  background: #ffffff;
+  float: right;
+}
+.cid-rjW6AlLAlA .timeline-element {
+  margin-bottom: 50px;
+  position: relative;
+  word-wrap: break-word;
+  word-break: break-word;
+  display: -webkit-flex;
+  flex-direction: row;
+  -webkit-flex-direction: row;
+}
+.cid-rjW6AlLAlA .timeline-element:hover .mbr-timeline-date {
+  box-shadow: 0 7px 20px 0px rgba(0, 0, 0, 0.08);
+  transition: all .4s;
+}
+.cid-rjW6AlLAlA .timeline-element:hover .timeline-text-content {
+  box-shadow: 0 7px 20px 0px rgba(0, 0, 0, 0.08);
+  transition: all .4s;
+}
+.cid-rjW6AlLAlA .mbr-timeline-date,
+.cid-rjW6AlLAlA .timeline-text-content {
+  transition: all .4s;
+}
+.cid-rjW6AlLAlA .reverse {
+  flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+}
+.cid-rjW6AlLAlA .reverse .timeline-text-content {
+  margin-right: 2rem;
+  margin-left: 0;
+}
+.cid-rjW6AlLAlA .reverse .time-line-date-content {
+  margin-left: 2rem;
+  margin-right: 0rem;
+}
+.cid-rjW6AlLAlA .reverse .time-line-date-content p {
+  float: left;
+}
+.cid-rjW6AlLAlA .iconBackground {
+  position: absolute;
+  left: 50%;
+  width: 20px;
+  height: 20px;
+  line-height: 30px;
+  text-align: center;
+  border-radius: 50%;
+  font-size: 30px;
+  display: inline-block;
+  background-color: #ffffff;
+  top: 20px;
+  margin-left: -10px;
+}
+.cid-rjW6AlLAlA .separline:before {
+  top: 20px;
+  bottom: 0;
+  position: absolute;
+  content: "";
+  width: 2px;
+  background-color: #ffffff;
+  left: calc(50% - 1px);
+  height: calc(100% + 4rem);
+}
+@media (max-width: 768px) {
+  .cid-rjW6AlLAlA .iconBackground {
+    left: 0 !important;
+  }
+  .cid-rjW6AlLAlA .separline:before {
+    left: 0!important;
+  }
+  .cid-rjW6AlLAlA .timeline-text-content {
+    margin-left: 0 !important;
+  }
+  .cid-rjW6AlLAlA .time-line-date-content {
+    margin-right: 0 !important;
+  }
+  .cid-rjW6AlLAlA .time-line-date-content p {
+    float: left !important;
+  }
+  .cid-rjW6AlLAlA .reverse .time-line-date-content {
+    margin-left: 0 !important;
+  }
+  .cid-rjW6AlLAlA .reverse .timeline-text-content {
+    margin-right: 0 !important;
+  }
+}
+.cid-rjW6AlLAlA .mbr-section-title {
+  color: #ffffff;
+}
+.cid-rjW6AlLAlA .mbr-timeline-text {
+  text-align: right;
+}
+.cid-rjW6AoslLw {
+  padding-top: 60px;
+  padding-bottom: 45px;
+  background-color: #241e1e;
+}
+@media (min-width: 992px) {
+  .cid-rjW6AoslLw .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rjW6AoslLw .mbr-figure {
+    padding-bottom: 3rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-rjW6AoslLw .mbr-text {
+    text-align: center;
+  }
+}
+.cid-rjW6AqcrQw {
+  background: #ffffff;
+}
+.cid-rjW6AqcrQw .image-block {
+  margin: auto;
+  width: 100% !important;
+}
+.cid-rjW6AqcrQw .mbr-figure {
+  margin: 0 auto;
+}
+.cid-rjW6AqcrQw figcaption {
+  position: relative;
+}
+.cid-rjW6AqcrQw figcaption div {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .cid-rjW6AqcrQw .image-block {
+    width: 100% !important;
+  }
+}
+.cid-rjW6Ary82J {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rjW6Ary82J .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rjW6Ary82J .btn {
+  margin: 0 0 .5rem 0;
+}
+.cid-rjW6Atcdvh {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rjW6Atcdvh h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-rjW6Atcdvh p {
+  color: #767676;
+  text-align: left;
+}
+.cid-rjW6Atcdvh .card-box {
+  padding-top: 2rem;
+}
+.cid-rjW6Atcdvh .card-wrapper {
+  height: 100%;
+}
+.cid-rjW6AuN0bE {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
+.cid-rjW6AuN0bE .row-links {
+  width: 100%;
+  justify-content: center;
+}
+.cid-rjW6AuN0bE .social-row {
+  width: 100%;
+  justify-content: center;
+}
+.cid-rjW6AuN0bE .media-container-row {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cid-rjW6AuN0bE .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-rjW6AuN0bE .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-rjW6AuN0bE .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-rjW6AuN0bE .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-rjW6AuN0bE .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-rjW6AuN0bE .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-rjW6AuN0bE .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-rjW6AuN0bE .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-rjW6AuN0bE .media-container-row .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
+.cid-rjW6AuN0bE .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-rjW6AuN0bE .media-container-row .row-copirayt p {
+  width: 100%;
+}
