--- a/curso/assets/mobirise/css/mbr-additional.css
+++ b/curso/assets/mobirise/css/mbr-additional.css
@@ -2101,3 +2101,73 @@ body {
 .cid-ri7n7cB8vN .media-container-row .row-copirayt p {
   width: 100%;
 }
+.cid-qU8A7WgWjS {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
+}
+.cid-qU8A7WgWjS .row-links {
+  width: 100%;
+  justify-content: center;
+}
+.cid-qU8A7WgWjS .social-row {
+  width: 100%;
+  justify-content: center;
+}
+.cid-qU8A7WgWjS .media-container-row {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cid-qU8A7WgWjS .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-qU8A7WgWjS .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-qU8A7WgWjS .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-qU8A7WgWjS .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-qU8A7WgWjS .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-qU8A7WgWjS .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-qU8A7WgWjS .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-qU8A7WgWjS .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-qU8A7WgWjS .media-container-row .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
+.cid-qU8A7WgWjS .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-qU8A7WgWjS .media-container-row .row-copirayt p {
+  width: 100%;
+}
