--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5649,7 +5649,7 @@ body {
   background-color: #072116;
 }
 .cid-rt1zNwzGic .mbr-section-subtitle {
-  color: #767676;
+  color: #efefef;
   text-align: center;
   font-weight: 300;
 }
