--- a/curso/assets/mobirise/css/mbr-additional.css
+++ b/curso/assets/mobirise/css/mbr-additional.css
@@ -1673,163 +1673,60 @@ body {
     width: 100% !important;
   }
 }
-.cid-rxE8FDfqya {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #072116;
+.cid-rykSI5Sruy {
+  padding-top: 45px;
+  padding-bottom: 90px;
+  background: linear-gradient(45deg, #072116, #000000);
 }
-.cid-rxE8FDfqya .mbr-section-btn > * {
-  margin: 0;
+.cid-rykSI5Sruy .list-group-item {
+  padding: .75rem 3.25rem;
 }
-.cid-rxE8FDfqya h4 {
-  font-weight: 500;
-}
-.cid-rxE8FDfqya p {
-  color: #232323;
-}
-.cid-rxE8FDfqya .aside-content {
-  -webkit-flex-basis: 100%;
-  flex-basis: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.cid-rxE8FDfqya .block-content {
-  display: -webkit-flex;
-  flex-direction: column;
-  -webkit-flex-direction: column;
+.cid-rykSI5Sruy .plan {
   word-break: break-word;
-}
-.cid-rxE8FDfqya .media {
-  margin: initial;
-  align-items: center;
-  -webkit-align-items: center;
-}
-.cid-rxE8FDfqya .mbr-figure {
-  align-self: flex-start;
-  -webkit-align-self: flex-start;
-  -webkit-flex-shrink: 0;
-  flex-shrink: 0;
-}
-.cid-rxE8FDfqya .card-img {
-  padding-right: 2rem;
-  width: auto;
-}
-.cid-rxE8FDfqya .card-img span {
-  font-size: 72px;
-  color: #707070;
-}
-@media (min-width: 992px) {
-  .cid-rxE8FDfqya .mbr-figure {
-    padding-right: 4rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-rxE8FDfqya .mbr-figure {
-    padding-right: 0;
-    padding-bottom: 1rem;
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 300px) {
-  .cid-rxE8FDfqya .card-img span {
-    font-size: 40px !important;
-  }
-}
-.cid-rxE8FDfqya .cost {
-  text-decoration: line-through;
+  position: relative;
+  max-width: 300px;
+  padding-right: 0;
+  padding-left: 0;
   color: #767676;
 }
-.cid-rxE8FDfqya .text2 SPAN {
-  color: #cc2952;
+.cid-rykSI5Sruy .plan .list-group-item {
+  position: relative;
+  -webkit-justify-content: center;
+  justify-content: center;
+  border: 0;
 }
-.cid-rxE8FDfqya H2 {
-  color: #ffffff;
+.cid-rykSI5Sruy .plan .list-group-item::after {
+  position: absolute;
+  bottom: 0;
+  left: 20%;
+  width: 60%;
+  height: 2px;
+  content: "";
+  background-color: #eaeaea;
 }
-.cid-rxE8FDfqya .text1 {
-  color: #ffffff;
+.cid-rykSI5Sruy .plan .list-group-item:last-child::after {
+  display: none;
 }
-.cid-rxE8FDfqya .text2 {
-  color: #ffffff;
+.cid-rykSI5Sruy .plan-header {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
-.cid-rxE9oFYtht {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #072116;
+.cid-rykSI5Sruy .plan-header,
+.cid-rykSI5Sruy .plan-body {
+  background-color: #fff;
 }
-.cid-rxE9oFYtht .mbr-section-btn > * {
-  margin: 0;
-}
-.cid-rxE9oFYtht h4 {
-  font-weight: 500;
-}
-.cid-rxE9oFYtht p {
+.cid-rykSI5Sruy .price-figure {
+  font-weight: 700;
   color: #232323;
 }
-.cid-rxE9oFYtht .aside-content {
-  -webkit-flex-basis: 100%;
-  flex-basis: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+.cid-rykSI5Sruy .price-value {
+  font-weight: 700;
+  vertical-align: top;
 }
-.cid-rxE9oFYtht .block-content {
-  display: -webkit-flex;
-  flex-direction: column;
-  -webkit-flex-direction: column;
-  word-break: break-word;
-}
-.cid-rxE9oFYtht .media {
-  margin: initial;
-  align-items: center;
-  -webkit-align-items: center;
-}
-.cid-rxE9oFYtht .mbr-figure {
-  align-self: flex-start;
-  -webkit-align-self: flex-start;
-  -webkit-flex-shrink: 0;
-  flex-shrink: 0;
-}
-.cid-rxE9oFYtht .card-img {
-  padding-right: 2rem;
-  width: auto;
-}
-.cid-rxE9oFYtht .card-img span {
-  font-size: 72px;
-  color: #707070;
-}
-@media (min-width: 992px) {
-  .cid-rxE9oFYtht .mbr-figure {
-    padding-right: 4rem;
+@media (max-width: 550px) {
+  .cid-rykSI5Sruy .price-figure {
+    font-size: 4.25rem;
   }
-}
-@media (max-width: 991px) {
-  .cid-rxE9oFYtht .mbr-figure {
-    padding-right: 0;
-    padding-bottom: 1rem;
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 300px) {
-  .cid-rxE9oFYtht .card-img span {
-    font-size: 40px !important;
-  }
-}
-.cid-rxE9oFYtht .cost {
-  text-decoration: line-through;
-  color: #767676;
-}
-.cid-rxE9oFYtht .text2 SPAN {
-  color: #cc2952;
-}
-.cid-rxE9oFYtht .text2 {
-  color: #ffffff;
-}
-.cid-rxE9oFYtht .text1 {
-  color: #ffffff;
-}
-.cid-rxE9oFYtht H2 {
-  color: #ffffff;
 }
 .cid-r5QJ6G2YyD {
   padding-top: 60px;
