--- a/curso/assets/mobirise/css/mbr-additional.css
+++ b/curso/assets/mobirise/css/mbr-additional.css
@@ -1981,6 +1981,7 @@ body {
 }
 .cid-rOagTAlnib .mbr-text {
   color: #767676;
+  text-align: center;
 }
 .cid-rOagTAlnib .card {
   display: flex;
@@ -2216,6 +2217,7 @@ body {
 }
 .cid-rO9IfyyLXV .mbr-text {
   color: #767676;
+  text-align: center;
 }
 .cid-rO9IfyyLXV .card {
   display: flex;
